Set new Facebook images

--- a/_posts/2013-03-01-rocken.markdown
+++ b/_posts/2013-03-01-rocken.markdown
@@ -2,7 +2,7 @@
 layout: blog_post
 author: Anders Termansen, Kapelmester
 title: Mød "Rocken"
-facebook_image: http://xn--kdogblod-54a.dk/assets/images/square_poster.png
+facebook_image: http://xn--kdogblod-54a.dk/assets/images/fotoklub/big/bent-Koedogblod_-3353.jpg
 ---
 
 Jeg er kapelmester i denne produktion, og jeg går under navnet "Rocken". Jeg er nok blandt de yngre i denne produktion, og det er første gang nogensinde, jeg har fået tildelt en rolle som kapelmester. På trods af de kun 23 år bag mig, har jeg en masse erfaring som sangskriver, så i kan roligt føle jer trygge.
